force-app/main/default/objects/Part_Reorder__e/Part_Reorder__e.object-meta.xml
<CustomObject>
    <label>Part Reorder</label>
    <pluralLabel>Part Reorders</pluralLabel>
</CustomObject>