force-app/main/default/objects/Part_Reorder__e/fields/Current_Stock__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock__c</fullName>
    <description>차감 직후 남은 재고 수량</description>
    <label>Current Stock</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>