force-app/main/default/objects/Part_Reorder__e/fields/Part_Id__c.field-meta.xml
<CustomField>
    <fullName>Part_Id__c</fullName>
    <description>재고 부족 임계값에 도달한 Part__c의 레코드 Id</description>
    <label>Part Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>