force-app/main/default/objects/Part_Reorder__e/fields/Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Point__c</fullName>
    <description>이 임계값 이하로 재고가 떨어져 이 이벤트가 발행됨</description>
    <label>Reorder Point</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>