force-app/main/default/objects/Part_Reorder__e/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>ERP 발주 시스템 매칭용 SKU</description>
    <label>SKU</label>
    <length>50</length>
    <type>Text</type>
</CustomField>