force-app/main/default/objects/Part_Reorder__e/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>발주 라우팅 대상 창고 (Part__c.Warehouse__c 값)</description>
    <label>Warehouse</label>
    <length>30</length>
    <type>Text</type>
</CustomField>